# rajzfelismero

./: .gitignore  96.mlpmodel  CMakeLists.txt  README.md  doxygen_setup.txt  full_28x28_1x1_128_64.mlpmodel  horizontal.mlpmodel  horizontal.txt  leiras.docx  qmnist.mlpmodel  test.mlpmodel  vertical.mlpmodel
src/: canvas.c  filehandler.c  gui.c  main.c  mlp.c  snippets.c  vector.c
src/headers/: canvas.h  errors.h  filehandler.h  gui.h  mlp.h  snippets.h  vector.h
tools/: gui_window_file_dialog.h  raygui.h
